--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/neel-thakker/markdown-blogPage#readme",
   "dependencies": {
+    "dompurify": "^2.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "mongoose": "^5.10.11"
+    "jsdom": "^16.4.0",
+    "marked": "^1.2.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.10.11",
+    "slugify": "^1.4.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
